Fix extension installed bubble sizing for cases where there's no body text.

BUG=618983

Review-Url: https://codereview.chromium.org/2070883002
Cr-Commit-Position: refs/heads/master@{#400204}

Former-commit-id: eb814f63fb1f396192cee63a86feb2582716bdcc